<?xml version="1.0"?>
<package format="2">
  <name>startup</name>
  <version>0.1.0</version>
  <description>This package starts all the nodes and starts tracking the detections.</description>

  <maintainer email="hello@tryolabs.com">Tryolabs</maintainer>

  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
